--- a/vignettes/starting_secsse.Rmd
+++ b/vignettes/starting_secsse.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "Using secsse 2"
+title: "Starting secsse"
 author: "Thijs Janzen"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Using secsse 2}
+  %\VignetteIndexEntry{Starting secsse}
   %\VignetteEncoding{UTF-8}
   %\VignetteEngine{knitr::rmarkdown}
 ---
@@ -14,29 +14,47 @@ secsse is an R package designed for multistate data sets under a concealed state
 
 ### Secsse input files
 
-Similar to the 'diversitree' (Fitzjohn et al. 2012) and 'hisse' (Beaulieu & O'Meara 2016) packages, secsse uses two input files: a rooted, ultrametric tree in nexus format (for conversion of other formats to nexus, we refer to the documentation in package 'ape') and a data file with two columns, the first containing taxa names and the second a numeric code for trait state with a header (usually 0,1,2,3, etc., but notice that 'NA' is a valid code too, if you are not sure what trait state to assign to a taxon). A comma-separated value file (.csv) generated in MsExcel works particularly well. The \*.csv file can be loaded into R using the read.csv() function. and should look like this:
+Similar to the 'diversitree' (Fitzjohn et al. 2012) and 'hisse'
+(Beaulieu & O'Meara 2016) packages, secsse uses two input files: a rooted, ultrametric tree in nexus format (for conversion of other formats to nexus, we refer to the documentation in package 'ape') and a data file with two columns,
+the first containing taxa names and the second a numeric code for trait state
+with a header (usually 0, 1, 2, 3, etc., but notice that 'NA' is a valid code
+too, if you are not sure what trait state to assign to a taxon). Here, we will 
+use a simple trait dataset with only values 0 and 1, indicating presence and
+absence of a trait. A comma-separated value file (.csv) generated in MsExcel 
+works particularly well. The \*.csv file can be loaded into R using the 
+read.csv() function. and should look like this:
 
 ```{r}
 library(secsse)
 data(traits)
-tail(traits) # NOTE: Data file is different? trait columng only has 0 and 1
+tail(traits) # NOTE: Data file is different? trait column only has 0 and 1
 ```
 
-This data set (here we see only the bottom lines of the data frame) has three character states labeled as 1, 2 and 3. Notice that unless you want to assign ambiguity to some but not all states (see below), the third column in your data file should be empty. Ambiguity about trait state (you are not sure which trait state to assign a taxon too, or you have no data on trait state for a particular taxon), can be assigned using 'NA'. secsse handles 'NA' differently from a full trait state, in that it assigns probabilities to all trait states for a taxon demarcated with 'NA'.
+This data set (here we see only the bottom lines of the data frame) has two character states labeled as 0 and 1. Ambiguity about trait state (you are not
+sure which trait state to assign a taxon too, or you have no data on trait state
+for a particular taxon), can be assigned using 'NA'. secsse handles 'NA'
+differently from a full trait state, in that it assigns probabilities to all
+trait states for a taxon demarcated with 'NA'.
 
-The second object we need is an ultrametric phylogenetic tree, that is rooted and has labelled tips. One can load it in R by using read.nexus(). In our example we load a prepared phylogeny named "phylo_vignette":
+The second object we need is an ultrametric phylogenetic tree, that is rooted
+and has labelled tips. One can load it in R by using read.nexus(). In our
+example we load a prepared phylogeny named "phylo_vignette":
 
 ```{r}
 data("phylo_vignette")
 ```
 
-For running secsse it is important that tree tip labels agree with taxon names in the data file, but also that these are in the same order. For this purpose, we run the following piece of code prior to any analysis:
+For running secsse it is important that tree tip labels agree with taxon names
+in the data file, but also that these are in the same order. For this purpose,
+we run the following piece of code prior to any analysis:
 
 ```{r}
 sorted_traits <- sortingtraits(traits, phylo_vignette)
 ```
 
-If there is a mismatch in the number of taxa between data and tree file, you will receive an error message. However, to then identify which taxa are causing issues and if they are in the tree or data file, you can use the name.check function in the 'geiger'(Harmon et al. 2008) package:
+If there is a mismatch in the number of taxa between data and tree file, you
+will receive an error message. However, to then identify which taxa are causing issues and if they are in the tree or data file, you can use the name.check
+function in the 'geiger'(Harmon et al. 2008) package:
 
 ```{r}
 library(geiger)
@@ -53,7 +71,8 @@ You can visualise the tip states using the package diversitree:
 
 ```{r plot_tree}
 if (requireNamespace("diversitree")) {
-  for_plot <- data.frame(trait = traits$trait, row.names = phylo_vignette$tip.label)
+  for_plot <- data.frame(trait = traits$trait, 
+                         row.names = phylo_vignette$tip.label)
 diversitree::trait.plot(phylo_vignette, dat = for_plot, 
                         cols = list("trait" = c("blue", "red")),
                         type = "p")
@@ -75,13 +94,21 @@ is uncertainty regarding state but one or multiple states can with certainty be
 excluded, secsse offers flexibility to handle ambiguity. In this case, the user
 only needs to supply a trait file, with at least four columns, one for the taxon
 name, and three for trait state. Below, we show an example of what the trait
-info should be like (the column with species' names has been removed). If a taxon
-may pertain to trait state 1 or 3, but not to 2, the three columns should have
-at least the values 1 and a 3, but never 2 (species in the third row). On the
-other hand, the species in the fifth row can pertain to all states: the first
-column would have a 1, the second a 2, the third a 3 (although if you only have
-this type of ambiguity, it is easier to assign `NA` and use a single-column data
-file).
+info should be like (the column with species' names has been removed). If a
+taxon may pertain to trait state 1 or 3, but not to 2, the three columns should 
+have at least the values 1 and a 3, but never 2 (species in the third row). On
+the other hand, the species in the fifth row can pertain to all states: the
+first column would have a 1, the second a 2, the third a 3 (although if you only have this type of ambiguity, it is easier to assign `NA` and use a single-column data file).
+
+```{r}
+#       traits traits traits
+# [1,]      2      2      2
+# [2,]      1      1      1
+# [3,]      2      2      2
+# [4,]      3      1      1
+# [5,]      1      2      3
+```
+
 
 ## Setting up an analysis
 
@@ -168,8 +195,8 @@ mu_vec <- secsse::create_mu_vector(state_names = c(0, 1),
 mu_vec
 ```
 
-The function `create_mus()` takes the same standard information we provided
-earlier, with as addition our previously made lambda_list. It uses the
+The function `create_mus_vector()` takes the same standard information we
+provided earlier, with as addition our previously made lambda_list. It uses the
 lambda_list to identify the rate indicators (in this case 1 and 2) that
 are already used and to thus pick new rates. We see that secsse has
 created a named vector with two extinction rates (3 and 4), which are
@@ -185,9 +212,9 @@ transitions between examined states. The information contained in this
 `shift_matrix` is then automatically mimicked for inclusion in the full matrix,
 to ensure that the same complexity in examined state transitions is also found
 in concealed states. 
-Instead of specifying the entire `shift_matrix`, instead we can suffice with only
-specifying the non-zero transitions. In this case these are from state 0 to 1, 
-and vice versa:
+Instead of specifying the entire `shift_matrix`, instead we can suffice with
+only specifying the non-zero transitions. In this case these are from state 0 
+to 1, and vice versa:
 
 ```{r ETD_Q}
 shift_matrix <- c()
@@ -203,8 +230,8 @@ q_matrix
 
 Thus, we first specify a matrix containing the potential state
 transitions, here 0-\>1 and 1-\>0. Then, we use
-'create_q_matrix' to create the q-matrix. By setting
-'diff.conceal' to TRUE, we ensure that the concealed states will get
+`create_q_matrix` to create the q-matrix. By setting
+`diff.conceal` to TRUE, we ensure that the concealed states will get
 their own rates specified. Setting this to FALSE would set their rates
 equal to the observed rates (5 and 6). The way to read the transition
 matrix is column-row, e.g. starting at state 0A, with rate 5 the species
@@ -233,7 +260,7 @@ Here, we specify that we want to optimize all parameters with rates 1,
 2, ..., 8. We set these at initial values at 0.1 for all parameters. Here, we
 will only use one starting point, but in practice it is often advisable
 to explore multiple different initial values to avoid getting stuck in a
-local optimum and missing the global optimum. idparsfix and initparsfix
+local optimum and missing the global optimum. `idparsfix` and `initparsfix`
 indicate that all entries with a zero are to be kept at the value zero.
 Lastly, we set the sampling fraction to be c(1, 1), this indicates to
 secsse that we have sampled per trait all species with that trait in our
@@ -281,7 +308,7 @@ Q_Examined
 Q_Concealed
 ```
 
-The function 'extract_par_vals' goes over the list answ\$MLpars and
+The function `extract_par_vals` goes over the list `answ$MLpars` and
 places the found parameter values back in consecutive vector 1:8 in this
 case. Here, we find that the speciation rate of trait 1 is higher than
 the speciation rate of trait 0.
@@ -399,7 +426,7 @@ contrast to a much higher speciation rate for state B (remember that
 speciation rate 1 is now associated with A, and not with state 0!).
 Similarly, extinction rates for both states are also quite different,
 with state A having a much lower extinction rate than state B. Examined
-trait shifts (Q_Examined) are quite low, whereas concealed trait shifts
+trait shifts (`Q_Examined`) are quite low, whereas concealed trait shifts
 seem to be quite high. The LogLikelihood seems to be lower than what we
 found for the ETD model.
 
@@ -530,12 +557,17 @@ e-mail the authors for help with this R package.
 =======
 ## References 
 
-Beaulieu, J. M., O'meara, B. C., & Donoghue, M. J. (2013). Identifying hidden rate changes in the evolution of a binary morphological character: the evolution of plant habit in campanulid angiosperms. Systematic biology, 62(5), 725-737.
+Beaulieu, J. M., O'meara, B. C., & Donoghue, M. J. (2013). Identifying hidden
+rate changes in the evolution of a binary morphological character: the evolution
+of plant habit in campanulid angiosperms. Systematic biology, 62(5), 725-737.
 
-Beaulieu, J. M., & O'Meara, B. C. (2016). Detecting hidden diversification shifts in models of trait-dependent speciation and extinction. Systematic biology, 65(4), 583-601.
+Beaulieu, J. M., & O'Meara, B. C. (2016). Detecting hidden diversification
+shifts in models of trait-dependent speciation and extinction. Systematic
+biology, 65(4), 583-601.
 
 FitzJohn, R. G. (2012). Diversitree: comparative phylogenetic analyses of diversification in R. Methods in Ecology and Evolution, 3(6), 1084-1092.
 
 Harmon, L. J., Weir, J. T., Brock, C. D., Glor, R. E., & Challenger, W. (2008). GEIGER: investigating evolutionary radiations. Bioinformatics, 24(1), 129-131.
 
-Rabosky, D. L., & Goldberg, E. E. (2015). Model inadequacy and mistaken inferences of trait-dependent speciation. Systematic Biology, 64(2), 340-355.
+Rabosky, D. L., & Goldberg, E. E. (2015). Model inadequacy and mistaken
+inferences of trait-dependent speciation. Systematic Biology, 64(2), 340-355.
