--- a/vignettes/plotting_states.Rmd
+++ b/vignettes/plotting_states.Rmd
@@ -90,7 +90,7 @@ secsse::plot_state_exact(parameters = params,
                  traits = traits,
                  num_concealed_states = 2,
                  sampling_fraction = c(1, 1),
-                 steps = 10,
+                 num_steps = 10,
                  prob_func = helper_function)
 
 secsse::plot_state_exact(parameters = params,
@@ -98,7 +98,7 @@ secsse::plot_state_exact(parameters = params,
                  traits = traits,
                  num_concealed_states = 2,
                  sampling_fraction = c(1, 1),
-                 steps = 100,
+                 num_steps = 100,
                  prob_func = helper_function)
 ```
 
@@ -159,6 +159,6 @@ secsse::plot_state_exact(parameters = parameter,
                          root_state_weight = "maddison_weights",
                          is_complete_tree = FALSE,
                          prob_func = helper_function,
-                         steps = 10)
+                         num_steps = 10)
 ```
 
