Add complete_tree vignette

--- a/vignettes/starting_secsse.Rmd
+++ b/vignettes/starting_secsse.Rmd
@@ -245,7 +245,7 @@ q_matrix
 
 Thus, we first specify a matrix containing the potential state
 transitions, here 0-\>1 and 1-\>0. Then, we use
-`create_q_matrix*(` to create the q-matrix. By setting
+`create_q_matrix()` to create the q-matrix. By setting
 `diff.conceal` to `TRUE`, we ensure that the concealed states will get
 their own rates specified. Setting this to `FALSE` would set their rates
 equal to the observed rates (5 and 6). The way to read the transition
