--- a/vignettes/complete_tree.Rmd
+++ b/vignettes/complete_tree.Rmd
@@ -42,31 +42,54 @@ mock traits.
 
 ```{r sim_plot_tree}
 library(secsse)
-library(DDD)
+
+spec_matrix <- c(0, 0, 0, 1)
+spec_matrix <- rbind(spec_matrix, c(1, 1, 1, 1))
+lambda_list <- secsse::create_lambda_list(state_names = c(0, 1),
+                                          num_concealed_states = 2,
+                                          transition_matrix = spec_matrix,
+                                          model = "CR")
+
+mu_vector <- secsse::create_mu_vector(state_names = c(0, 1),
+                                   num_concealed_states = 2,
+                                   model = "CR",
+                                   lambda_list = lambda_list)
+
+shift_matrix <- c(0, 1, 3)
+shift_matrix <- rbind(shift_matrix, c(1, 0, 4))
+
+q_matrix <- secsse::create_q_matrix(state_names = c(0, 1),
+                                    num_concealed_states = 2,
+                                    shift_matrix = shift_matrix,
+                                    diff.conceal = FALSE)
 
 
-set.seed(41)
-out <- DDD::dd_sim(pars = c(0.4, 0.1, 40), age = 15)
-phy <- out$tas
+speciation_rate <- 0.5
+extinction_rate <- 0.05
+q_ab <- 0.1
+q_ba <- 0.1
+used_params <- c(speciation_rate, extinction_rate, q_ab, q_ba)
 
-spec_traits <- sample(c(0, 1), ape::Ntip(phy), replace = TRUE)
+sim_lambda_list <- secsse::fill_in(lambda_list, used_params)
+sim_mu_vector   <- secsse::fill_in(mu_vector, used_params)
+sim_q_matrix    <- secsse::fill_in(q_matrix, used_params)
+
+# sim_tree <- secsse::secsse_sim(lambdas = sim_lambda_list,
+#                                mus = sim_mu_vector,
+#                                qs = sim_q_matrix,
+#                                crown_age = 5,
+#                                num_concealed_states = 2,
+#                                seed = 5, drop_extinct = FALSE)
 
 
 
-if (requireNamespace("diversitree")) {
-  for_plot <- data.frame(trait = spec_traits,
-                         row.names = phy$tip.label)
-  diversitree::trait.plot(phy, dat = for_plot,
-                          cols = list("trait" = c("blue", "red")),
-                          type = "p")
-}
 ```
 
 Now that we have our phylogeny, let's specify our model. We are going to specify
 the same ETD model as in the _Starting secsse_ vignette. For the full details,
-consult it with `vignette("Starting secsse", package = "secsse")`.
+consult it with `vignette("starting_secsse", package = "secsse")`.
 
-``` {r, set-up ETD}
+``` {r, set-up_ETD, eval=FALSE}
 spec_matrix <- c()
 spec_matrix <- rbind(spec_matrix, c(0, 0, 0, 1))
 spec_matrix <- rbind(spec_matrix, c(1, 1, 1, 2))
@@ -109,7 +132,7 @@ would for one with extant species. However, this time we make sure to set the
 `is_complete_tree` argument to `TRUE` (defaults to `FALSE` if omitted). This
 enables secsse to use the information present in extinct lineages.
 
-```{r fitting_model_complete_tree}
+```{r fitting_model_complete_tree, eval=FALSE}
 complete_tree_ml <- secsse_ml(phy = phy,
                               traits = spec_traits,
                               num_concealed_states = 2,
@@ -126,7 +149,7 @@ complete_tree_ml <- secsse_ml(phy = phy,
 
 Now we can see what our results look like.
 
-```{r complete_tree_res}
+```{r complete_tree_res, eval=FALSE}
 complete_tree_ml_etd <- complete_tree_ml$ML
 ETD_par_complete <- secsse::extract_par_vals(idparslist, complete_tree_ml$MLpars)
 complete_tree_ml_etd
@@ -148,7 +171,7 @@ extant species. Let's follow the standard procedure using a similar phylogeny -
 the same tree we used before - but where all the extinct lineages have been 
 removed. We'll keep all other model specification the same.
 
-```{r fitting_ml_reconstructed_tree}
+```{r fitting_ml_reconstructed_tree, eval=FALSE}
 phy_reconstructed <- out$tes
 
 # Grab the correct traits of the extant lineages
@@ -178,7 +201,7 @@ reconstructed_tree_ml <- secsse_ml(phy = phy_reconstructed,
 ```
 
 
-```{r reconstructed_tree_res_comparison}
+```{r reconstructed_tree_res_comparison, eval=FALSE}
 reconstructed_tree_ml_etd <- reconstructed_tree_ml$ML
 ETD_par_reconstructed <- secsse::extract_par_vals(idparslist, reconstructed_tree_ml$MLpars)
 reconstructed_tree_ml
