--- a/vignettes/secsse_versions.Rmd
+++ b/vignettes/secsse_versions.Rmd
@@ -4,7 +4,7 @@ author: "Thijs Janzen"
 date: "2023-07-10"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{secsse versions}
+  %\VignetteIndexEntry{Secsse versions}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
